--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ ShootyShootyBangBangEngine/bin/Debug/libenet.dylib
 ShootyShootyBangBangEngine/bin/
 ShootyShootyBangBang/obj/
 ShootyShootyBangBang/bin/
+.vs/ShootyShootyBangBang/v15/
