--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ ShootyShootyBangBangEngine/bin/
 ShootyShootyBangBang/obj/
 ShootyShootyBangBang/bin/
 .vs/ShootyShootyBangBang/v15/
+.vs/ShootyShootyBangBang/v16/
