--- a/ShootyShootyBangBangEngine/packages.config
+++ b/ShootyShootyBangBangEngine/packages.config
@@ -5,7 +5,7 @@
   <package id="Microsoft.Net.Compilers.Toolset" version="3.3.1" targetFramework="net48" developmentDependency="true" />
   <package id="OpenTK" version="3.1.0" targetFramework="net48" />
   <package id="SixLabors.Core" version="1.0.0-beta0008" targetFramework="net48" />
-  <package id="SixLabors.ImageSharp" version="1.0.0-dev003104" targetFramework="net48" />
+  <package id="SixLabors.ImageSharp" version="1.0.0-beta0007" targetFramework="net48" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.1" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
