--- a/ShootyShootyBangBang/ShootyShootyBangBang.csproj
+++ b/ShootyShootyBangBang/ShootyShootyBangBang.csproj
@@ -82,7 +82,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClientServer\NetPackets.cs" />
+    <Compile Include="GameObjects\Client\ClientCharacter.cs" />
+    <Compile Include="GameObjects\Client\PlayerControlledCharacter.cs" />
+    <Compile Include="Networking\ClientServer\ServerNetPackets.cs" />
+    <Compile Include="Networking\ClientServer\SharedNetPackets.cs" />
+    <Compile Include="GameObjects\ClientServer\SSBBCharacter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -90,11 +94,9 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="Client\ClientPacketHandler.cs" />
-    <Compile Include="Server\ServerPacketHandler.cs" />
+    <Compile Include="Networking\Client\ClientPacketHandler.cs" />
+    <Compile Include="Networking\Server\ServerPacketHandler.cs" />
     <Compile Include="ShootyShootyBangBangGame.cs" />
-    <Compile Include="SSBBPlayerControlledCharacter.cs" />
-    <Compile Include="SSBBCharacter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
