--- a/ShootyShootyBangBangEngine/ShootyShootyBangBangEngine.csproj
+++ b/ShootyShootyBangBangEngine/ShootyShootyBangBangEngine.csproj
@@ -87,6 +87,7 @@
     <Compile Include="GameObjects\Cameras\FollowCamera.cs" />
     <Compile Include="GameObjects\Cameras\Camera.cs" />
     <Compile Include="GameObjects\Components\ComponentAiSystem.cs" />
+    <Compile Include="GameObjects\Components\ComponentReplicator.cs" />
     <Compile Include="GameObjects\Components\ComponentTransform.cs" />
     <Compile Include="GameObjects\EntityComponentManager.cs" />
     <Compile Include="GameObjects\GameObject.cs" />
